[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Font/flappyfont.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Font/pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Font/Gamer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Font/pixel font-7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Font/Neon.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sounds/click.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/image/transparency.png" type="Texture" id=7]
[ext_resource path="res://assets/image/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/image/shop.png" type="Texture" id=9]
[ext_resource path="res://scripts/leftarr.gd" type="Script" id=10]
[ext_resource path="res://scripts/MainScript.gd" type="Script" id=11]
[ext_resource path="res://scripts/start.gd" type="Script" id=12]
[ext_resource path="res://scripts/score.gd" type="Script" id=13]
[ext_resource path="res://scripts/rightarr.gd" type="Script" id=14]
[ext_resource path="res://scripts/openshop.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 170
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 80
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 124
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 48
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 763.816, 27.7356 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 3 )

[node name="Game1" type="Node2D"]

[node name="level" type="Label" parent="."]
margin_left = 335.0
margin_top = -5.0
margin_right = 374.0
margin_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 0.647059, 0.921569, 1 )
text = "1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="score" type="Label" parent="."]
margin_left = 310.0
margin_top = 330.0
margin_right = 424.0
margin_bottom = 735.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0431373, 0.784314, 0.627451, 1 )
text = "0"
align = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bonus" type="Label" parent="score"]
anchor_left = 0.456
anchor_top = -0.019
anchor_right = 0.456
anchor_bottom = -0.019
margin_left = -19.984
margin_top = -12.305
margin_right = 20.016
margin_bottom = 25.695
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "1x"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Time" type="Label" parent="."]
visible = false
margin_left = 315.0
margin_top = 600.0
margin_right = 445.0
margin_bottom = 807.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.2, 0.756863, 0.709804, 1 )
text = "4
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="start" type="Button" parent="."]
pause_mode = 2
margin_left = 1.0
margin_top = -103.0
margin_right = 729.0
margin_bottom = 1086.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0.545098, 0.827451, 1 )
custom_colors/font_color_hover = Color( 0, 0.545098, 0.827451, 1 )
action_mode = 0
flat = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="starttext" type="Node2D" parent="start"]
position = Vector2( 5, 100 )

[node name="to" type="Label" parent="start/starttext"]
margin_left = 310.0
margin_top = 480.0
margin_right = 379.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.784314, 0.827451, 1 )
text = "to"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Label" parent="start/starttext"]
margin_left = 290.0
margin_top = 515.0
margin_right = 443.0
margin_bottom = 688.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.92549, 0.827451, 1 )
text = "play
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tap" type="Label" parent="start/starttext"]
margin_left = 255.355
margin_top = 393.302
margin_right = 521.355
margin_bottom = 571.302
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0.545098, 0.827451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.92549, 0.827451, 1 )
text = "tap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="TextureButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.647059 )
margin_left = 255.0
margin_top = 700.0
margin_right = 355.0
margin_bottom = 760.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="shop"]
margin_left = 15.6866
margin_top = 6.88647
margin_right = 111.687
margin_bottom = 57.8865
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0.92549, 0.827451, 1 )
text = "shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="StaticBody2D" parent="."]
visible = false

[node name="leftwall" type="CollisionShape2D" parent="left"]
visible = false
position = Vector2( -30, 316.101 )
rotation = 1.5708
shape = SubResource( 10 )
one_way_collision = true

[node name="right" type="StaticBody2D" parent="."]
visible = false

[node name="leftwall" type="CollisionShape2D" parent="right"]
visible = false
position = Vector2( 750, 316.101 )
rotation = -1.5708
shape = SubResource( 10 )
one_way_collision = true

[node name="coin" type="Sprite" parent="."]
position = Vector2( 17.9639, 398.999 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="coin"]
anchor_right = 0.871
margin_left = 42.7262
margin_top = -33.6674
margin_right = -24.3738
margin_bottom = 17.3326
custom_fonts/font = SubResource( 11 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftmove" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 7.461, 3.92757 )
scale = Vector2( 344.473, 1067.5 )
normal = ExtResource( 7 )
script = ExtResource( 10 )

[node name="rightmove" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 354.698, 4.48984 )
scale = Vector2( 362.433, 1069.58 )
normal = ExtResource( 7 )
script = ExtResource( 14 )
[connection signal="fspawn" from="screen" to="screen" method="_on_screen_fspawn"]
[connection signal="respawn" from="screen" to="screen" method="_on_screen_respawn"]
[connection signal="score_changed" from="screen" to="score" method="_on_screen_score_changed"]
[connection signal="timeout" from="Timer" to="screen" method="_on_Timer_timeout"]
[connection signal="pressed" from="start" to="start" method="_on_start_pressed"]
[connection signal="button_down" from="shop" to="shop" method="_on_shop_button_down"]
[connection signal="pressed" from="leftmove" to="leftmove" method="_on_leftmove_pressed"]
[connection signal="released" from="leftmove" to="leftmove" method="_on_leftmove_released"]
[connection signal="pressed" from="rightmove" to="rightmove" method="_on_rightmove_pressed"]
[connection signal="released" from="rightmove" to="rightmove" method="_on_rightmove_released"]
